--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Olivia Macmillan-Scott"
-  avatar           : "20F1628A-7A4D-4B7E-8322-A1C558B26F1D_1_201_a.jpeg"
+  avatar           : "grad.png"
   bio              : "PhD Student"
   location         : "University College London (UCL)"
   employer         :
