--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
 #    url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: http://oliviams.github.io/files/Academic_CV.pdf
     
 #  - title: "Guide"
 #    url: /markdown/
